# ulam-spiral

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format-code.sh  test-code-formatting.sh
.github/workflows/: cppunit.yaml
include/: ulamspiral.hpp
src/: CMakeLists.txt  main.cpp  ulamspiral.cpp
test/: CMakeLists.txt  ulamspiral_test.cpp
